# COSOLVE-Asset-Map

./: .env.example  .gitignore  README.md  build.sh  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/api/: query.py  serializers.py  urls.py  views.py
apps/assets/: admin.py  models.py
apps/catalog/: admin.py  models.py
apps/core/: context_processors.py  forms.py  middleware.py  urls.py  views.py
apps/imports/: services.py  urls.py  views.py
apps/sources/: admin.py  apps.py  models.py
config/: urls.py
config/settings/: base.py  production.py
data/: sample_assets.csv  virginia_real_assets.json
docs/: data_dictionary.md  data_sources.md  deployment.md  import_guide.md  security_and_publication.md  smoke_test.md
scripts/: build_real_asset_catalog.py
static/css/: admin.css  base.css  map.css  tokens.css
static/data/: virginia-counties.geojson  virginia-state-boundary.geojson
static/js/: api.js  filters.js  map-viewer.js  map.js  popups.js  results.js  state.js
templates/: 404.html  500.html  base.html
templates/admin/: base_site.html  index.html
templates/assets/: detail.html  directory.html
templates/core/: about_data.html  suggest_update.html  update_thanks.html
templates/imports/: data_quality.html  preview.html  quality_table.html
templates/includes/: filter_fields.html
templates/map/: viewer.html
templates/regions/: compare.html
templates/registration/: login.html
tests/backend/: test_admin.py  test_api.py  test_deployment_commands.py  test_imports.py  (+4 more)
(+18 files in other folders)
