[project]
name = "cosolve-uxs-map"
version = "0.1.0"
description = "COSOLVE Unmanned Systems Asset Map Viewer"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.2,<5.3",
  "dj-database-url>=2.3,<3",
  "gunicorn>=23,<24",
  "python-dotenv>=1.1,<2",
  "psycopg[binary]>=3.2,<4",
  "sentry-sdk[django]>=2.40,<3",
  "whitenoise>=6.9,<7",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.8,<8",
  "ruff>=0.11,<0.12",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "DJ"]
ignore = ["DJ012"]

[tool.ruff.lint.per-file-ignores]
"scripts/build_real_asset_catalog.py" = ["E501"]
